Optimized jre.